[package]
authors = ["Thomas Harrison <theharrisoncrafter@gmail.com>"]
name = "lib_dice"
version = "0.0.0"
description = "A library for parsing dice rolls"
documentation = "https://docs.rs/lib_dice/"
homepage = "https://github.com/automas-dev/lib_dice"
repository = "https://github.com/automas-dev/lib_dice"
keywords = ["dice", "roll", "parse", "nom"]
readme = "README.md"
license = "MIT"
edition = "2015"

[dependencies]
nom = "8.0.0"
rand = "0.10.1"
